added merge exercise, join types, and a bunch of smaller changes for workshop day prep

--- a/DataFrameReview.ipynb
+++ b/DataFrameReview.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# DataFrame review\n",
+    "\n",
+    "One big problem with Pandas is that, sometimes for historical reasons, there are multiple ways of doing the same thing. \n",
+    "\n",
+    "The syntax for accessing DataFrames has always been one of the most confusing aspects for me. Here I present, as a review, a condensed version of my [Python data structures notebook](DataStructures.ipynb), plus my [Accessing DataFrames notebook](AccessingDataFrames.ipynb) from a previous workshop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Python Dictionary for storing mixed-type data\n",
     "\n",
     "What we call \"tabular data\" are also just commonly called spreadsheets, or in database terms they would be called tables. Ideally, each column contains a single type of data.\n",
@@ -31,7 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Accessing the equivalent of a column"
+    "#### Accessing the equivalent of a column\n",
+    "\n",
+    "Putting the Dictionary's key in square brackets return the value, which is a List."
    ]
   },
   {
@@ -58,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We can even do math on lists of numbers"
+    "#### We can do math on lists of numbers"
    ]
   },
   {
@@ -359,7 +372,7 @@
     "Columns are not just a list of values, they are a **Series**.\n",
     "\n",
     "- Series have an index alongside the values which makes sure they stay in proper alignment with other series in a DataFrame\n",
-    "- Series is the base one-dimensional (1D) data structure in Pandas, while DataFrames tend to be 2D"
+    "- **Series is the base one-dimensional (1D) data structure in Pandas, while DataFrames tend to be 2D**"
    ]
   },
   {
@@ -386,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List of column names\n",
+    "#### List of column names inside the square brackets\n",
     "\n",
     "You can select multiple columns by putting a *list of column names* inside the square brackets"
    ]
@@ -482,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +504,7 @@
        "1500"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,6 +579,22 @@
    "source": [
     "df.sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Exercise*\n",
+    "\n",
+    "See the difference when you take the mean of all the columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -760,6 +789,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### *Exercise*\n",
+    "\n",
+    "Return all rows in which the \"hundreds\" value is greater than or equal to 400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Series are automatically aligned by their index\n",
     "\n",
     "Here we create a Series from scratch, but its index is in descending numerical order"
@@ -767,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +826,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +935,7 @@
        "4     eee       500  50.0    False        Five"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,6 +1149,22 @@
    "source": [
     "df2.loc[:,'hundreds']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Exercise*\n",
+    "\n",
+    "Do you know how to use the slice notation to specify just the rows up to and including \"Three\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1405,7 +1466,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SettingWithCopyWarning"
+    "### *Exercise*\n",
+    "\n",
+    "Return all columns for all rows in which the \"boolean\" column is True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SettingWithCopyWarning\n",
+    "\n",
+    "If you use this \"list inside of square brackets\" notation and assign to a new variable as a way to just keep a couple columns of your DataFrame, you will run into a **SettingWithCopyWarning** if you try to change that new DataFrame. \n",
+    "\n",
+    "*Because of some Pandas inner-workings, when you slice or index into a DataFrame it's not actually clear whether it will create a \"view\" into the original DataFrame or a copy of the data!* "
    ]
   },
   {
@@ -1494,6 +1575,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### It does the operation but gives you a warning\n",
+    "\n",
+    "You don't want these warnings all over the place in your notebook or you'll miss really important errors and warnings, and there's a chance you're doing something wrong, anyway!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1502,17 +1592,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/emonson/anaconda3/envs/jlab/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "<ipython-input-30-677717d8156d>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "  df_nums['sums'] = df_nums['hundreds'] + df_nums['tens']\n"
      ]
     }
    ],
    "source": [
     "df_nums['sums'] = df_nums['hundreds'] + df_nums['tens']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create an explicit `.copy()`\n",
+    "\n",
+    "- **If you are assigning a subset of a DataFrame to a new variable**, with the intention of creating a copy that you'll work on independently of the original, **create an explicit copy by chaining the `.copy()` function to the end!**\n",
+    "- If you're trying to assign values to a subset of your original DataFrame, **use the `df.loc[,]` notation.**\n",
+    "\n",
+    "Additional learning resources:\n",
+    "- [The best explanation of the SettingWithCopyWarning I've seen](https://www.dataquest.io/blog/settingwithcopywarning/)\n",
+    "- [A complicated explanation in the Pandas documentation](https://pandas.pydata.org/pandas-docs/version/0.22/indexing.html#indexing-view-versus-copy)\n"
    ]
   },
   {
