--- a/MeltIntro.ipynb
+++ b/MeltIntro.ipynb
@@ -137,6 +137,7 @@
     "### Minimally, for a `melt()` you need to specify \n",
     "\n",
     "- a list of the columns which **don't** get \"un-pivoted\" – *these values will get repeated*.\n",
+    "- **all of the rest of the columns will get melted / un-pivoted**\n",
     "\n",
     "*Notice that the column headers by default end up in a column called \"variable\", and the table body values end up in a column called \"value\".*"
    ]
@@ -262,7 +263,7 @@
     "\n",
     "The argument name for the list of columns that don't get melted is `id_vars`. This argument is the default if you don't use its name, as above, but it's not a bad idea in your code to spell this out explicitly. \n",
     "\n",
-    "The `id_vars` \"identify\" the rest of the columns in each original row. They are the IDs, or the key fields, which uniquely identify the rest of the information."
+    "The `id_vars` \"identify\" the rest of the columns in each original row. **They are the IDs, or the key fields, which uniquely identify the rows in the original table.**"
    ]
   },
   {
@@ -382,9 +383,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Or just specify the columns to be melted\n",
+    "\n",
+    "If you don't want to keep any ID columns, and just melt a few, you can just specify the value columns to melt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  variable  value\n",
+       "0     2009      1\n",
+       "1     2009      2\n",
+       "2     2009      3\n",
+       "3     2010      4\n",
+       "4     2010      5\n",
+       "5     2010      6\n",
+       "6     2011      7\n",
+       "7     2011      8\n",
+       "8     2011      9"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.melt(value_vars=['2009','2010','2011'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## More complete `.melt()` statement\n",
     "\n",
-    "More fully, you can explicitly specify any combination of these (as long as you include an `id_vars` list):\n",
+    "More fully, you can explicitly specify any combination of these:\n",
     "\n",
     "- list of columns that don't get melted (and, thus, will get repeated): `id_vars=`\n",
     "- list of columns that get melted from columns into rows: `value_vars=`\n",
@@ -394,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +607,7 @@
        "8    Ohio  2011       9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,9 +627,9 @@
     "\n",
     "You can sort the rows of a DataFrame according to any column, or ordered combination of columns.\n",
     "\n",
-    "**The results won't be saved unless you do it with `inplace=True` or assign the results of the sort to a variable!**\n",
-    "\n",
-    "Sometimes this is useful to just inspect a DataFrame in a certain sort order, when you don't really need to save the results."
+    "- **The results won't be saved unless you do it with `inplace=True` or assign the results of the sort to a variable!**\n",
+    "- Sometimes this is useful to just inspect a DataFrame in a certain sort order, when you don't really need to save the results.\n",
+    "- Notice that the default is to sort in \"ascending\" order, or `ascending=True`\n"
    ]
   },
   {
@@ -636,9 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### See, it displayed, but didn't really get saved!\n",
-    "\n",
-    "Notice that the default is to sort in \"ascending\" order, or `ascending=True`"
+    "#### See, it displayed, but didn't really get saved!"
    ]
   },
   {
@@ -1019,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
