--- a/MergeDatasets.ipynb
+++ b/MergeDatasets.ipynb
@@ -141,8 +141,8 @@
     }
    ],
    "source": [
-    "ps_tidy_min = pd.read_csv('data/people_states_tidy.csv')\n",
-    "ps_tidy_min"
+    "ps_tidy = pd.read_csv('data/people_states_tidy.csv')\n",
+    "ps_tidy"
    ]
   },
   {
@@ -260,6 +260,8 @@
     "## LEFT JOIN\n",
     "\n",
     "We'll do a LEFT JOIN by using the `merge()` function, specifying which DataFrame is on the \"left\" and which is on the \"right\" for the JOIN. It's just the order in which you list them as the first two arguments to `merge()`.\n",
+    "\n",
+    "*(Note: For more details on JOIN types, see the [JoinTypes notebook](JoinTypes.ipynb).)*\n",
     "\n",
     "We also need to specify which column contains the ID fields / keys to join on. We put these in the \"left_on\" and \"right_on\" arguments."
    ]
@@ -399,7 +401,7 @@
     }
    ],
    "source": [
-    "ps_tidy_pop = pd.merge(ps_tidy_min, state_pop, how='left', left_on='state', right_on='state')\n",
+    "ps_tidy_pop = ps_tidy.merge(state_pop, how='left', on='state')\n",
     "ps_tidy_pop"
    ]
   },
@@ -613,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
