adding groupby, but not finished

--- a/DataFrameReview.ipynb
+++ b/DataFrameReview.ipynb
@@ -276,7 +276,7 @@
     "\n",
     "Notice the column of sequential integers off to the left-hand side of the DataFrame output. That is the DataFrame's **index**. \n",
     "\n",
-    "- The index contains the names of the rows\n",
+    "- **The index contains the names of the rows**\n",
     "- Because we didn't explicitly specify an index column, Pandas created one for us"
    ]
   },
@@ -634,7 +634,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**You can use a series of True/False values to return only the rows of a DataFrame where the Series equals True**"
+    "### Boolean Series to return only certain rows\n",
+    "\n",
+    "You can use a series of True/False values to return only the rows of a DataFrame where the Series equals True"
    ]
   },
   {
@@ -791,7 +793,7 @@
    "source": [
     "### *Exercise*\n",
     "\n",
-    "Return all rows in which the \"hundreds\" value is greater than or equal to 400"
+    "Return all rows in which the \"hundreds\" column value is greater than or equal to 400"
    ]
   },
   {
@@ -1092,7 +1094,7 @@
    "source": [
     "## `.loc[]` label-based two-axis indexing/selecting\n",
     "\n",
-    "A more general, and in some ways readable, way of selecting DataFrame elements (rows, columns, values) is by using `df.loc[]` to specify \\[row, column\\] labels"
+    "A more general, and in some ways more readable, way of selecting DataFrame elements (rows, columns, values) is by using `df.loc[]` to specify \\[row, column\\] labels"
    ]
   },
   {
@@ -1119,7 +1121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Colon `:` for wholes or slices\n",
+    "### Colon `:` for whole or slices\n",
     "\n",
     "A notation that comes from accessing lists in Python is the \"slice\" operator, which is specified with a colon between two values. **The colon by itself denotes the whole row or column.** So, here we grab a single column."
    ]
@@ -1468,7 +1470,7 @@
    "source": [
     "### *Exercise*\n",
     "\n",
-    "Return all columns for all rows in which the \"boolean\" column is True"
+    "Using the `.loc[]` notation, return all columns for all rows in which the \"boolean\" column is True"
    ]
   },
   {
@@ -1592,12 +1594,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-30-677717d8156d>:1: SettingWithCopyWarning: \n",
+      "/Users/emonson/anaconda3/envs/jlab/lib/python3.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_nums['sums'] = df_nums['hundreds'] + df_nums['tens']\n"
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
    ],
@@ -1736,7 +1738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
