--- a/TidyDataIntro.ipynb
+++ b/TidyDataIntro.ipynb
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "df2.groupby(\"treatment\").agg('mean')"
+    "df2.groupby(\"treatment\").aggregate('mean')"
    ]
   },
   {
