incremental edits on groupby lessons

--- a/Groupby_Basics.ipynb
+++ b/Groupby_Basics.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "5   C     12    0.6"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fbed84f7970>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7ff9e0065d30>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        " 'C': Int64Index([2, 5], dtype='int64')}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "3   A      8    0.4"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "C       18    0.9"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "C      18    9   0.9  0.45"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "C       18"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "C       18   0.45"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/data2_max_min.png'> (Expected output)"
+    "*Expected output*\n",
+    "\n",
+    "<img src='images/data2_max_min.png'>"
    ]
   },
   {
@@ -721,12 +723,13 @@
     "\n",
     "- Applies a function to each of the groups `('mean', 'sum', 'min', np.sum, etc.)`\n",
     "- Only a single function is allowed – it will be applied to all the columns\n",
-    "- **Doesn't change the number of rows from the original!**"
+    "- **Doesn't change the number of rows from the original!**\n",
+    "- *Notice that we lost the 'key' column, but we retain the Index!*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +802,7 @@
        "5      9   0.45"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +844,7 @@
        "Name: data1, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +870,7 @@
        "Name: data1, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +975,7 @@
        "5   C     12    0.6           9"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1088,7 @@
        "5   C     12    0.6           9           True"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/data2_min_col.png'> (Expected output)"
+    "*Expected output*\n",
+    "\n",
+    "<img src='images/data2_min_col.png'>"
    ]
   },
   {
@@ -1147,7 +1152,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/d2_equals_min_col.png'> (Expected output)"
+    "*Expected output*\n",
+    "\n",
+    "<img src='images/d2_equals_min_col.png'>"
    ]
   },
   {
