slight edits to groupby lessons

--- a/Groupby_Basics.ipynb
+++ b/Groupby_Basics.ipynb
@@ -9,7 +9,7 @@
     "Our data often consists of individual observations or events. To make sense of the patterns in the data it can be helpful to aggregate the data within categorical groups. The general method is described as the Split-Apply-Combine strategy for data analysis, as described in [this classic paper by Hadley Wickham](https://www.jstatsoft.org/article/view/v040i01/v40i01.pdf).\n",
     "\n",
     "- In SQL this is done with `GROUPBY`\n",
-    "- In Tableau this is done with Level of Detail (LOD) calculations\n",
+    "- In Tableau this is done with all visualizations + Level of Detail (LOD) calculations\n",
     "- In R this is done with the `dplyr` package\n",
     "- **In Python with Pandas this is done with `.groupby()`**"
    ]
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7ff9e0065d30>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fd4c85df9a0>"
       ]
      },
      "execution_count": 3,
@@ -721,7 +721,7 @@
     "\n",
     "**You'll probably use aggregation more often, but it's important to know how to transform.** \n",
     "\n",
-    "- Applies a function to each of the groups `('mean', 'sum', 'min', np.sum, etc.)`\n",
+    "- Applies a function to each of the groups\n",
     "- Only a single function is allowed – it will be applied to all the columns\n",
     "- **Doesn't change the number of rows from the original!**\n",
     "- *Notice that we lost the 'key' column, but we retain the Index!*"
