--- a/Groupby_NCexploration.ipynb
+++ b/Groupby_NCexploration.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring NC NO2 hourly emmisions\n",
+    "# Exploring North Carolina NO<sub>2</sub> hourly emmisions\n",
     "\n",
-    "From the [EPA site on Nitrogen Dioxide pollution](https://www.epa.gov/no2-pollution), \"NO2 primarily gets in the air from the burning of fuel. NO2 forms from emissions from cars, trucks and buses, power plants, and off-road equipment.\"\n",
+    "From the [EPA site on Nitrogen Dioxide pollution](https://www.epa.gov/no2-pollution), \"NO<sub>2</sub> primarily gets in the air from the burning of fuel. NO<sub>2</sub> forms from emissions from cars, trucks and buses, power plants, and off-road equipment.\"\n",
     "\n",
     "**Data Source:** [EPA pregenerated hourly data files](https://aqs.epa.gov/aqsweb/airdata/download_files.html#Raw)\n",
     "\n",
     "**I'm using hourly data so we can explore the data at many different time scales, and in doing so, learn how to do aggregations at many scales on dates and times.**\n",
     "\n",
-    "The EPA has hourly data for Ozone, SO2, CO, and NO2 for all sites in the US. **Because that data is quite large, I have filtered down to only North Carolina sites**, and I excluded Lee County because that data was incomplete for 2018. I have also filtered down to a subset of the columns, leaving only the State, County, Site, Date, Time and Measured value.\n",
+    "The EPA has hourly data for Ozone, SO<sub>2</sub>, CO, and NO<sub>2</sub> for all sites in the US. **Because that data is quite large, I have filtered down to only North Carolina sites**, and I excluded Lee County because that data was incomplete for 2018. I have also filtered down to a subset of the columns, leaving only the State, County, Site, Date, Time and Measured value.\n",
     "\n",
     "Here is an example of the output if you load in one row from the original data. (Note that not all columns are visible in this output...)"
    ]
