random changes saved before updating repo with DataMatters content

--- a/JoinTypes.ipynb
+++ b/JoinTypes.ipynb
@@ -28,7 +28,12 @@
     "- **Right**: Eye color table\n",
     "- **Key field**: Name\n",
     "\n",
-    "<img src=\"images/left_table.png\" width=200> <img src=\"images/right_table.png\" width=200>\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <th><img src=\"images/left_table.png\" width=200></th>\n",
+    "    <th><img src=\"images/right_table.png\" width=200></th>\n",
+    "  </tr>\n",
+    "</table>\n",
     "\n",
     "We want to join together these two tables using the Pandas `merge()` method – equivalent to the SQL JOIN command – but there are four options for how we can do this, depending on what data (and lack of data) we want to retain: \n",
     "\n",
@@ -646,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
